Fixed grey oval background on mobile

--- a/src/styles/_featurettes.scss
+++ b/src/styles/_featurettes.scss
@@ -6,7 +6,6 @@
     overflow: hidden;
     &::after {
         background: url('#{$images}/grey-oval.svg') no-repeat top;
-        background-size: 100% auto;
         position: absolute;
         content: ' ';
         height: 100%;
